--- a/contact.html
+++ b/contact.html
@@ -118,9 +118,9 @@
 			<div class="row">
 				<div class="col">
 					<div class="xs-padding"></div>
-	             	<i class="fa fa-medium fa-2x" aria-hidden="true" style="color: white"></i>
-	             	<i class="fa fa-medium fa-2x" aria-hidden="true" style="color: white"></i>
-	             	<i class="fa fa-medium fa-2x" aria-hidden="true" style="color: white"></i>
+	             	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: white"></i>
+	             	<i class="fa fa-twitter-square fa-2x" aria-hidden="true" style="color: white"></i>
+	             	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: white"></i>
 	             	<p id="jason"><a href="http://jasonlietnguyen.github.io/" style="color: white;" target="_blank">Designed By: Jason Nguyen</a></p>
 	             	<div class="xs-padding"></div>
              	</div>
